prod-croatia-vault-main@d7d7a29b8d0/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: vault
    istio-injection: disabled
  name: vault
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
    argocd.argoproj.io/sync-options: Prune=false
