prod-croatia-vault-main@d7d7a29b8d0/vault/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
  namespace: vault
spec:
  host: vault.apps.dev-nonpci-shared.npnbank.local
  port:
    targetPort: 8200
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: None 
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFAzCCAuugAwIBAgIQJQvAgGggdZ1IUYPJ8VxWIDANBgkqhkiG9w0BAQsFADAU
[...]
      p6PsQ6BStv1bd85H0tbqdR+xM/oP4Td1n0KWGA8JFCPVXKEG+r3v
      -----END CERTIFICATE-----
  to:
    kind: Service
    name: vault-active
